--- a/src/components/contactMeButton/ContactMeButton.css
+++ b/src/components/contactMeButton/ContactMeButton.css
@@ -1,24 +1,28 @@
-.main-button {
+.contact-me-button-div {
+  margin-bottom: 2rem;
+}
+
+.contact-me-button {
   background-color: #55198b;
   border: solid 1px #55198b;
   color: white;
   font-weight: 500;
+  font-size: 1.3rem;
   line-height: 1.1;
   width: max-content;
-  padding: 13px 22px;
+  padding: 1.5rem 3rem 1.5rem 3rem;
   margin-right: 0px;
   /* text-transform: uppercase; */
-  border-radius: 6px;
+  border-radius: 1.2rem;
   text-align: center;
   text-decoration: none;
   font-family: "Google Sans Regular";
   display: block;
   margin-top: 20px;
-  font-size: 18px;
   cursor: pointer;
   letter-spacing: 2px;
 }
-.main-button:hover {
+.contact-me-button:hover {
   /* background-color: #ffffff; */
   /* color: black; */
   transition: ease-in 0.3s;
@@ -31,14 +35,14 @@
 }
 /* Media Query */
 @media (max-width: 768px) {
-  .main-button {
+  .contact-me-button {
     font-size: 15px;
     padding: 12px 18px;
     margin-right: 0px;
   }
 }
 @media (max-width: 320px) {
-  .main-button {
+  .contact-me-button {
     font-size: 12px;
   }
 }
