--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,10 +39,9 @@
   line-height: normal;
 }
 .header .logo-name {
-  font-family: "Agustina Regular";
   font-weight: bold;
   padding: 0 10px;
-  /* color: #55198b; */
+  font-size: 3rem;
 }
 
 /* menu */
