--- a/src/components/projectLanguages/ProjectLanguages.css
+++ b/src/components/projectLanguages/ProjectLanguages.css
@@ -1,3 +1,8 @@
+.software-skills-main-div {
+  display: flex;
+  flex-direction: row;
+}
+
 .dev-icons-languages {
   padding-left: 0;
   list-style: none;
