--- a/src/containers/projects/ProjectsSection.css
+++ b/src/containers/projects/ProjectsSection.css
@@ -1,20 +1,43 @@
-.project-title {
-  font-size: 56px;
+.projects-main-div {
+}
+
+.projects-heading {
+  font-size: 4rem;
   font-weight: 400;
-  line-height: normal;
 }
 
 .projects-text {
+  flex: 1;
   text-align: left;
-  font-size: 1.6rem;
-}
-
-.projects-software-skills-container {
-  display: flex;
-  justify-content: center;
+  font-size: 1.5rem;
+  font-family: "Poppins Light";
 }
 
 .projects-text-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.projects-links-and-software-skills-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.projects-link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.projects-text-div {
+}
+
+.projects-image-div {
+}
+
+.software-skills-container {
+  display: flex;
+  justify-content: center;
 }
 
 .startup-project-text img {
