--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,10 +14,6 @@
   overflow: hidden;
   /* background-color: #fff; */
 }
-.grey-color {
-  color: #868e96;
-}
-
 .header li a {
   display: block;
   padding: 20px 20px;
@@ -68,7 +64,7 @@
 }
 
 .header .menu-icon .navicon {
-  background: #333;
+  background: #fff;
   display: block;
   height: 2px;
   position: relative;
@@ -78,7 +74,7 @@
 
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
-  background: #333;
+  background: #fff;
   content: "";
   display: block;
   height: 100%;
