--- a/src/containers/projects/Projects.css
+++ b/src/containers/projects/Projects.css
@@ -1,3 +1,12 @@
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.projects-header-div {
+  flex-direction: column;
+}
+
 .projects-main-div {
   display: flex;
   overflow: hidden;
