Setup about me page

--- a/src/containers/aboutMe/AboutMe.css
+++ b/src/containers/aboutMe/AboutMe.css
@@ -1,78 +1,115 @@
-.main {
-  width: 90%;
-  padding: 20px 10px;
-  margin: 0px auto;
-  margin-top: 4rem;
+.aboutme-heading-mobile {
+  display: none;
 }
-.aboutme-main {
+
+.aboutme-heading-desktop {
+  font-size: 4rem;
+  font-weight: 400;
+}
+
+.aboutme-main-div {
   display: flex;
-  /* width: 90%; */
-  padding: 20px 10px;
-  margin: 0px auto;
-  margin-top: 2rem;
+  overflow: hidden;
+}
+
+.aboutme-main-div > * {
+  flex: 1;
+  margin-bottom: 30px;
 }
 
 .aboutme-description {
-  line-height: 1.2;
+  font-family: "Poppins Light";
+  font-size: 1.5rem;
+  line-height: 1.5;
 }
-
-.aboutme-main > * {
-  flex: 1;
-  padding: 1rem 8rem 1rem 4rem;
-  flex-direction: column;
-}
-.button-greeting-div {
-  display: flex;
-  margin-top: 20px;
+.aboutme-description-link {
+  color: white;
 }
 
 .aboutme-text {
-  margin-top: 80px;
-  font-size: 70px;
-  line-height: 1.1;
-  font-family: "Google Sans Bold";
+  margin: 1.5rem 0rem 0rem;
+  flex: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  font-family: "Poppins Light";
 }
 
-.greeting-text-p {
-  font-size: 40px;
-  margin-right: 40px;
-  font-family: "Google Sans Medium";
+.aboutme-text-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.aboutme-links-and-software-skills-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.aboutme-link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.aboutme-text-div {
+  margin: 0rem 2rem 0rem;
+}
+
+.aboutme-image-div > * {
+  max-width: 100%;
+  margin-top: 100px;
+}
+
+.software-skills-container {
+  display: flex;
+  justify-content: center;
 }
 
 /* Media Query */
 @media (max-width: 1380px) {
-  .greeting-text {
-    font-size: 50px;
-  }
-  .greeting-text-p {
-    font-size: 20px;
+  .aboutme-title {
+    font-size: 40px;
   }
 }
 @media (max-width: 768px) {
-  .button-greeting-div {
-    justify-content: space-around;
-  }
-  .greeting-text {
-    font-size: 30px;
-    margin-top: 0px;
-    text-align: center;
-  }
-  .greeting-nickname {
-    font-size: 25px;
-    text-align: center;
-  }
-  .greeting-text-p {
-    font-size: 16px;
-    margin-right: 0px;
-    text-align: center;
-  }
-  .greeting-main {
-    display: block;
+  .aboutme-main-div {
+    flex-direction: column;
   }
 
-  .portfolio-repo-btn-div {
-    width: 100%;
+  .aboutme-heading-desktop {
+    display: none;
+  }
+
+  .aboutme-link {
+    margin: 0rem 0rem 1rem;
+  }
+
+  .aboutme-text {
+    margin: 0rem 0rem 2rem;
+  }
+
+  .aboutme-description {
+    text-align: center;
+    font-family: "Poppins Light";
+    font-size: 1.6rem;
+    line-height: 1;
+  }
+
+  .aboutme-heading-mobile {
     display: flex;
     justify-content: center;
+    margin: 2rem 0rem 0rem;
+    font-size: 4rem;
+    font-weight: 400;
+  }
+
+  .aboutme-title {
+    font-size: 30px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .aboutme-main-div {
+    margin: 0rem 0rem 1rem;
   }
 }
