--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,5 @@
 .footer-text {
+  padding: 2rem;
   text-align: center;
   /* color: #868e96; */
   font-weight: bold;
@@ -6,5 +7,7 @@
 }
 
 .footer-div {
-  margin-top: 2rem;
+  margin: 2rem 0rem 2rem;
+  display: flex;
+  justify-content: center;
 }
